Inventory controller (#31)
* Endret til isEmpty foreløpig men må finne en annen løsning for å sjekke om strengen er helt tom

* lagt til metoder på item for å få tak i getComponentBrand og getComponentModel. Disse var kun tilgjengelige fra component.

* inventoryController, fxml-fil oppdatert. Har også lagt til nye klasse for å kunne søke i ui. Ny klasse: FilerTableViewItemPredicate. Måtte også legge til en metode på inventory

* Har lagt til en ekstra konstruktør samt endret navn på metoder i inventoryRepostory

* Lagt til css-fil for å style inventory-scene. Ikke gjort så mye enda

* Lagt til combobox i inventoryController

* endringer